# practice

./: access_demo.cpp  astyle_demo.cpp  astyle_demo.hpp  big_buffer.cpp  char_demo.cpp  conversion_U8_from_S32_demo.cpp  cp_demo.cpp  deqtor.cpp  dladdr_demo.cpp  enum_demo.cpp  equeal_range_demo.cpp  getBaudrate.cpp  get_network_info_ioctl.cpp  getaddrinfo.cpp  getifaddrs.cpp  getifaddrs_man.cpp  if_demo.cpp  inet_ntop.cpp  inifile.c  ls_demo.cpp  p_plus_plus.cpp  point_demo.cpp  regex_demo.cpp  reverse_order_pair.cpp  rmoldlog.sh  setrlimit.cpp  shellcheck_test.sh  sleep_demo.cpp  strftime_demo.cpp  string_char.cpp  string_size.cpp  strlwr.cpp  test_for.cpp  timeval_demo.cpp  tuple_demo.cpp  unique_ptr.cpp  vector_stru.cpp
LinuxC_epoll/server/: config_info.c  config_info.h  database_process.c  epoll_connect.c  epoll_connect.h  epoll_server  file_operations.c  file_operations.h  g_net_update.c  g_net_update.h  ini.ini  log_8000  makefile  sql_pool.c  sql_pool.h  thread_pool.c  thread_pool.h
adb_usb/: 10086  10088  TCP-recv.c  TCP-send.cpp  TCP-send_10088.cpp  adb_usb.cpp  app_transmission.cpp  app_transmission.h  com.chenhl.testusbconnect.UsbConnect.apk  main.cpp  recv  send
aes_rsa_demo/: AES1.cpp  AES2.cpp  AES3.cpp  a.out  aes.cpp  aes.out  evp-encrypt.cpp  evp.cpp  evp.out  key.cpp  openssl_aes_cbc.txt  private.pem  public.pem  rsa.out  rsa_example.cpp
aes_rsa_demo/check_bing/: aes.key.iv  aes.key.iv_bk  evp_encrypt.cpp  evp_encrypt.h  key_iv.txt  key_iv.txt_bk  recover.txt
aes_rsa_demo/generate_aes_key_iv/: aes.key.iv  evp_encrypt.cpp  recover.txt
android_share_screen/: file_combine.cpp  key_frame.cpp
arr_sum/: arr_sum.cpp
bmp_demo/: bmp24to16  bmp24to16RGB565.cpp
callback_demo/: callback.cpp
char_arr_demo/: arr_demo.cpp
charge_plus/: Makefile.am  Makefile.in  config.h.in  configure.ac  configure.scan  make_all_lib.sh
charge_plus/android_mgr/: Makefile.am
charge_plus/android_mgr/src/: adb_ctrl.cpp  android_mgr.cpp  android_shm_mgr.h  main.cpp
charge_plus/application/: config.json
charge_plus/autom4te.cache/: output.0  requests  traces.0  traces.1
charge_plus/charge/: Makefile.am
charge_plus/charge/src/: android_mgr.cpp  heartbeat.cpp  idevice_ctrl.h  ios_mgr.cpp  ios_shm_mgr.cpp  listen_usb.cpp  thread_pool.cpp  thread_pool.h  usb_action_data.h
charge_plus/config/: APPList.json  board_config.ini  net_traffic.json  userInfo.json
charge_plus/ios_mgr/: Makefile.am
charge_plus/ios_mgr/src/: idevice_ctrl.cpp  ios_mgr.cpp  main.cpp
charge_plus/log_mgr/: Makefile.am
charge_plus/log_mgr/src/: log_mgr.cpp  log_mgr.h  logdata.cpp  logdata.h
charge_plus/public_func/: Makefile.am
charge_plus/public_func/src/: json_read.cpp  json_read.h  public_function.cpp  public_function.h
charge_plus/script_file/: auto_run.sh  check.sh  setserial.sh  usb_monitor.sh  version.sh
charge_plus/serial_mgr/src/: com_transmission.cpp  com_transmission.h  comm_helper.cpp  enum_board.h  inifile.cpp
charge_plus/update/: CMakeCache.txt  cmake_install.cmake  cmakeclean.sh
charge_plus/update/oss_c_sdk/: aos_buf.c  oss_get_object_to_file.h
charge_plus/update/src/: CMakeLists.txt  FileDown.h  HttpRequest.cpp  cmake_install.cmake  common.cpp  fileMd5.cpp  inifile.cpp  inifile.h
charge_plus_ok/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.status  configure  libtool  make_all_release.sh
charge_plus_ok/serial_mgr/: Makefile  Makefile.am  Makefile.in
charge_plus_ok/serial_mgr/src/: com_transmission.lo  comm_helper.h  comm_helper.lo  enum_board.cpp  enum_board.lo  inifile.h  inifile.lo
charge_plus_ok/serial_mgr/src/.deps/: com_transmission.Plo  comm_helper.Plo  enum_board.Plo  inifile.Plo
hash_demo/: hash.cpp
im/: im_server.txt  mysql_redis_php_nginx.txt  rsa_aes_private.key  rsa_private.key  rsa_public.key  teamtalk安装部署_ubuntu.txt
im/code.taobao.org/svn/ttmsgserver/trunk/source/IMServer/MessageDispatchService/: CMakeLists.txt  DataSync.cpp  DataSync.h  MessageDispatch.cpp  MessageDispatchService.vcxproj  MessageDispatchService.vcxproj.filters  RabbitMQ.cpp  RabbitMQ.h  RouteServConn.cpp  RouteServConn.h  alter_table.sql  alter_table_A.sql  index.html
im/teamtalk_git/: history.txt
inifile_demo/: config.ini  config.ini_bak  inirw.c  inirw.h  main.c
int_array/: delete_duplicate_element_in_the_array.cpp  delete_duplicate_element_in_the_array2.cpp
itoa_demo/: itoa.cpp
lambda/: a.out  lambda_generate_for_each.cpp
linux_timer/: CTimer.cpp  CTimer.h  Makefile  main.cpp  timer - 副本.cpp  timer.cpp
lock_demo/: a.out  lock_demo.cpp
mq/: 1.cpp  c_mq.cpp  c_mq.h  mq.cpp  mq_read  mq_read.c  mq_write  mq_write.c  tags
new_charge_test/: sqlite3_20161103.cpp  test.h  test1.c  test2.c  test3.c  test_demo.cpp  test_enum.c
openssl_demo/: openssl_1.0.2d-0ubuntu1.5.debian.tar.xz  openssl_1.0.2d-0ubuntu1.5.dsc  qianming.cpp  qianming.h
popen_demo/: a.out  aarch64.out  popen.cpp
printf_demo/: printf.c  tags
python_demo/: 24dot.py  GuessNumber.py  a.out  e.py  get_ip_by_dns.cpp  get_ip_by_dns.py  seleniumone.py  seleniumone1.py  test  test.py  test24.py  test25.py
queue_demo/: BlockingQueue.hpp  blockingqueue  bounded_blocking_queue.cpp  bounded_blocking_queue.h  exception.cpp  list.cpp  list_find.cpp  main.cpp  tags
random_number/: a.out  minstd_rand0.cpp
replace_demo/: replace_demo.cpp
sc_info/: configure.ac
sc_info/src/: scinfo.cpp  scinfo.h
scinfo/: math  test_file
site-service/: .gitignore  pom.xml
sqlite3_test/: charge_data_db.cpp  charge_data_db.h  sqlite3_demo.cpp  test.c  test.db3
stl/: mutating_algorithms.cpp  non_mutating_algorithm.cpp  sort_algorithm.cpp  vector_erase.cpp  vector_swap.cpp
string_demo/: a.out  replace_demo.cpp  string_demo.cpp  tags  test.cpp
strtok_demo/: strtok_demo.c
system_demo/: a.out  system_demo.cpp  tags
template_demo/: a.out  template_demo.cpp
thread_demo/: a.out  thread.cpp  thread1.cpp
update/: Makefile
update/libjson/: CMakeLists.txt  Makefile.bak
vector_demo/: tags  vector_demo.cpp
web/: arp_test  arp_test.cpp  rh  tags
webServer-master/: makefile  webserver
(+1249 files in other folders)
