AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS=public_func serial_mgr log_mgr android_mgr ios_mgr charge   
#CURRENTPATH=$(shell pwd)
#AM_CPPFLAGS=-I$(CURRENTPATH)/public_func/src -I$(CURRENTPATH)/android_mgr/src -I$(CURRENTPATH)/charge/src -I$(CURRENTPATH)/http_req/src -I$(CURRENTPATH)/ios_mgr/src -I$(CURRENTPATH)/log_mgr/src -I$(CURRENTPATH)/serial_mgr/src
AM_CPPFLAGS=-I$(top_srcdir)
#AM_CFLAGS=-I$(top_srcdir)
#CPFLAG=$(DEFS)
export AM_CPPFLAGS 